@@ -261,9 +261,6 @@ public class HCatOutputFormat extends HCatBaseOutputFormat {
             hiveConf.setBoolean(ConfVars.METASTORE_USE_THRIFT_SASL.varname, true);
             hiveConf.set(ConfVars.METASTORE_KERBEROS_PRINCIPAL.varname, kerberosPrincipal);
         }
-        if(conf.get(HCatConstants.HCAT_KEY_TOKEN_SIGNATURE) != null) {
-          hiveConf.set("hive.metastore.token.signature", conf.get(HCatConstants.HCAT_KEY_TOKEN_SIGNATURE));
-        }
       } else {
         //Thrift url is null, copy the hive conf into the job conf and restore it
         //in the backend context
@@ -289,6 +286,10 @@ public class HCatOutputFormat extends HCatBaseOutputFormat {
           }
         }
 
+      }
+
+      if(conf.get(HCatConstants.HCAT_KEY_TOKEN_SIGNATURE) != null) {
+        hiveConf.set("hive.metastore.token.signature", conf.get(HCatConstants.HCAT_KEY_TOKEN_SIGNATURE));
       }
 
       // figure out what the maximum number of partitions allowed is, so we can pass it on to our outputinfo
